Update codes